# File-Retrieval-Engine-POSIX-Sockets

./: README.md
app-cpp/: CMakeLists.txt
app-cpp/include/: ClientSideEngine.hpp  ServerSideEngine.hpp
app-cpp/src/: ClientAppInterface.cpp  ClientSideEngine.cpp  ServerAppInterface.cpp  ServerSideEngine.cpp  file-retrieval-server.cpp
app-java/: pom.xml
app-java/src/main/java/csc435/app/: ClientAppInterface.java  ClientSideEngine.java  Dispatcher.java  FileRetrievalServer.java  IndexStore.java  Pair.java  ServerAppInterface.java  ServerSideEngine.java  Worker.java
